syntax = "proto3";

package executor;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

enum ExecutorStatus {
  IDLE = 0;
  BUSY = 1;
}

message WatchResponse {
  ExecutorStatus status = 1;
}

message RunTaskResponse {
  string id = 1;
  string status = 2;
  string message = 3;
}

service Executor {
  rpc Echo (Request) returns (Reply) {}
  rpc Watch (google.protobuf.Empty) returns (stream WatchResponse) {}
  rpc RunTask (TaskDetail) returns (stream RunTaskResponse) {}
  rpc GetTask (GetTaskRequest) returns (GetTaskReply) {}
}

message Request {
  string message = 1;
}

message Reply {
  string message = 1;
}

message TaskDetail {
  string id = 1;

  string status = 2;

  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp started_at = 4;
  google.protobuf.Timestamp paused_at = 5;
  google.protobuf.Timestamp terminated_at = 6;

  string name = 7;
  string description = 8;

  string working_dir = 9;
  string command_line = 10;
  string output_file_path = 11;
  string message = 12;
}

message GetTaskRequest {

}

message GetTaskReply {
  string task_id = 1;
  string status = 2;
}


message ExecutorInfo {
  string host = 1;
  int32 port = 2;
}
